<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">个窝</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_header">登录</string>    
    <string name="login_phone">获取登录账号请联系：15601883226 QQ:1056540798</string>
    <string name="login_start"> 登录</string>
    <string name="main_mood">心情</string>
    <string name="main_find">发现</string>
    <string name="main_news">消息</string>
    <string name="main_mine">我的</string>
    <string name="publish_start">发表</string>
    <string name="publish_header_text">发表心情</string>
    <string name="mood_title_hint">标题（可选）</string>
    <string name="mood_content">内容</string>
</resources>
