<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:id="@+id/xinqing"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/header_color"
        >
        <include layout="@layout/commom_back_btn" />
        <TextView
            android:id="@+id/setting_pass_resssss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/publish_header_text" 
            style="@style/header_text"
            />
        <Button
            android:id="@+id/publish_start"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/bt_yuanjiao_blue"
            android:text="@string/publish_start"
            android:textColor="@android:color/white"
             />
    </RelativeLayout>
    <EditText
        android:id="@+id/mood_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mood_title_hint"
        android:background="@null"
        android:maxLength="26"
        android:lines="1"
        android:inputType="textMultiLine"
        android:layout_gravity="center_vertical"
        android:padding="15dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mood_underline"
        />
	<EditText
          android:id="@+id/mood_content"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:hint="@string/mood_content"
          android:inputType="textMultiLine"
		  android:gravity="top"
		  android:padding="15dp"  
		  android:background="@null"       
          />
</LinearLayout>
